--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Train Notifications System</title>
-    <link rel="stylesheet" href="styless.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                 <li><a href="#about">About</a></li>
             </ul>
         </nav>
-        <a href="deployed_project_url" class="btn">Visit App</a>
+        <a href="https://kinghope007.github.io/trainss/" class="btn">Visit App</a>
     </section>
 
     <!-- Feature Section -->
